# oop_lab_3

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: figure.h
src/: figure.cpp
test/: GTests.cpp
